@@ -23,3 +23,5 @@ Next Version Target: 0.3
  * Bug #947271: daemon code clean-up to meet pep8 guidelines (Matt Fischer)
  * Bug #1040248: Re-purpose code for new version of quickly (Jono Bacon)
  * Bug #1033685: Daemon launcher should have a --restart option (Rafał Cieślak)
+ * Bug #1024085: Rename the api from *_completed() to *_accomplished() for
+ better consistency. (Matt Fischer)
